src/test/deca/syntax/valid/created/class.deca
class A{
    int b = 0;
}
