src/test/deca/syntax/invalid/created/faux20.deca
class A{
	public int a;
	a = 23;
}

{}
